--- a/client/src/pages/homepage.css
+++ b/client/src/pages/homepage.css
@@ -1,8 +1,26 @@
 .window {
 margin-top: 10px;
-border: 5px solid black;
-background-color: white;
 width: 100%;
 text-align: center;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.whole-app {
+    width: 100%;
+    height: 100%;
+
+}
+
+.whole-window {
+    color: ;
+    width:80%;
+    border: 5px solid black;
+    background-color: white;
+
+}
+.whole-window , p {
+    color: black;
 
 }
