--- a/client/src/components/homepageData.css
+++ b/client/src/components/homepageData.css
@@ -8,24 +8,29 @@
     padding: 20px;
     margin: 20px;
   }
-  
+
   .card h2 {
     margin-top: 0;
     font-size: 24px;
     color: #333;
   }
-  
+
   .card p {
     margin-top: 10px;
     font-size: 14px;
     color: #555;
     text-align: center;
   }
-  
+
   .loading {
     font-size: 18px;
     color: #333;
     text-align: center;
     margin-top: 50px;
   }
-  
+
+  p {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
