--- a/client/src/pages/homepage.css
+++ b/client/src/pages/homepage.css
@@ -19,9 +19,9 @@
     flex-direction: column;
     align-items: center;
     width: 80%;
-    height: 100%;
+    height: 120%;
     background-color: #fff;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-top: 300px;
   }
 
   .content {
