--- a/client/src/pages/homepage.css
+++ b/client/src/pages/homepage.css
@@ -11,7 +11,7 @@
     align-items: center;
     width: 100%;
     height: 80%;
-    background-color: #f2f2f2;
+    background-color: white;
   }
   
   .whole-window {
