--- a/client/src/components/homepageData.css
+++ b/client/src/components/homepageData.css
@@ -28,6 +28,7 @@
 
 .event-image img {
     margin-bottom: 10px;
+    padding-top: 100px;
     width: 1000px;
     height: 1000px;
     max-width: 1000px;
@@ -37,33 +38,45 @@
 
 .event-text {
     font-family: 'Montserrat', sans-serif;
-    font-size: 50px;
+    margin-top: 100px;
+    font-size: 20px;
     line-height: 2;
     text-align: center;
     margin-bottom: 20px;
 }
 
-.event-text a {
-    color: #007bff;
+.event-text a {  
+    color: #009ed7;
     text-decoration: none;
     font-size: 15px;
+    display: center
 }
 
 body {
-    margin-top: 50px;
+    margin-top: 150px ;
 }
 
 .dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
+    background-color: #00008b;
     border: none;
-    cursor: pointer;
+    font-family: 'Montserrat', sans-serif;
+    margin: 20px;
+    border-radius: 25px;
+    height: 50px;
+    width: 120px;
+    font-size: 16px;
+    color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease-in-out;
 }
 
+
 .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
+    cursor: pointer;
+    background-color: white;
+    color: #00008b;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    
 }
 
 .dropdown {
