--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -3,12 +3,12 @@ body {
   }
 
 .main-footer {
-    background-color: #00008b;
+    background: linear-gradient(15deg,#00008b, #04ada8);
     color: #fff;
     padding-top: 3em;
     padding-bottom: 60px;
     width: 100%;
-    text-align: center;
+    text-align:left;
     display: flex;
     justify-content: space-between;
 }
@@ -20,10 +20,25 @@ body {
 
 
 .col {
-    width: 30%;
+    width: 25%;
     float: left;
 }
 
 .main-footer p {
     margin: 0.5em;
 } 
+
+.logo {
+    width: 30%;
+    }
+
+.copyright {
+    text-align: center;
+    margin-top: 1em;
+    }
+
+/* hr {
+    color: #fff;
+    width: 100%;
+    border-width: 1px;
+    } */
