Trying to fix the footer

--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -1,23 +1,33 @@
 body {
-    margin-bottom: 30px;
-  }
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    }
+
+.container {
+    height: 100%;
+    max-width: 80%;
+    margin: 0 auto;
+    }
+
+.main-container:after {
+    content: "";
+    clear: both;
+    display: table;
+    }
 
 .main-footer {
     background: linear-gradient(15deg,#00008b, #04ada8);
     color: #fff;
     padding-top: 3em;
-    padding-bottom: 60px;
+    padding-bottom: 50px;
     width: 100%;
     text-align:left;
     display: flex;
     justify-content: space-between;
+    /* min-height: calc(100vh - 211px - 58px); */
+     min-height: 250px; 
 }
-
-.container {
-    max-width: 80%;
-    margin: 0 auto;
-}
-
 
 .col {
     width: 25%;
