--- a/client/src/pages/profilePage/ProfilePage.css
+++ b/client/src/pages/profilePage/ProfilePage.css
@@ -1,4 +1,4 @@
-h2{
+/* h2{
     margin-bottom: 4rem;
 }
 
@@ -17,12 +17,12 @@ h3 {
     text-align: center;
 }
 
-img {
+/* img {
     border: 1px solid black;
-}
+} */
 
-.historical-event {
+/* .historical-event {
 
     border: grey 1px solid;
     padding: 2rem;
-}
+} */ 
