--- a/client/src/pages/loginPage/LoginPage.css
+++ b/client/src/pages/loginPage/LoginPage.css
@@ -1,4 +1,4 @@
-#main-container {
+/* #main-container {
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -13,4 +13,4 @@
 
 h2 {
     text-align: center;
-}
+} */
