--- a/client/src/pages/signUpPage/SignUpPage.css
+++ b/client/src/pages/signUpPage/SignUpPage.css
@@ -1,4 +1,4 @@
-#main-container {
+/* #main-container {
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -14,4 +14,4 @@
 h2 {
     text-align: center;
 }
-
+ */
