--- a/client/src/components/signUpForm/SignUpForm.css
+++ b/client/src/components/signUpForm/SignUpForm.css
@@ -4,10 +4,11 @@ form {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    border: 1px solid black;
+    border: 1px solid #04ada8;
     border-radius: 10px;
-    padding: 2rem 2rem;
-
+    padding: 4rem 4rem;
+    align-items: center;
+    margin: auto;
 }
 
 form, label {
