--- a/client/src/pages/loginPage/LoginPage.css
+++ b/client/src/pages/loginPage/LoginPage.css
@@ -1,16 +1,67 @@
-/* #main-container {
-    height: 100vh;
-    width: 100vw;
+#login-main-container {
     display: flex;
-    flex-direction: column;   
+    flex-direction: column;
     align-items: center;
-
-}
-
-#form-content {
-    margin-top: 5rem;
+    justify-content: center;
+    height: 100vh;
 }
 
 h2 {
-    text-align: center;
-} */
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-family: 'Montserrat', sans-serif;
+    color: #00008b;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    height: auto;
+    border: 1px solid #04ada8;
+
+    
+}
+
+label {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-family: 'Montserrat', sans-serif;
+
+}
+
+
+
+input[type="text"], input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    margin-bottom: 20px;
+    border: 1px solid gray;
+    border-radius: 5px;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+input[type="submit"] {
+    background: linear-gradient(white, #cdcdcd);
+    border: none;
+    font-family: 'Montserrat', sans-serif;
+    margin: 20px;
+    border-radius: 25px;
+    height: 50px;
+    width: 100px;
+    font-size: 16px;
+    color: #00008b;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease-in-out;
+}
+
+input[type="submit"]:hover {
+    background-color: rgb(255, 255, 255);
+}
