--- a/client/src/pages/profilePage/ProfilePage.css
+++ b/client/src/pages/profilePage/ProfilePage.css
@@ -1,19 +1,24 @@
-/* h2{
+h2{
     margin-bottom: 4rem;
+    margin-top: 10rem;
+    text-align: center;
+    font-family: 'Great Vibes', cursive;
+    font-size: 40px;
+    
 }
 
 .event-text {
     font-size: smaller;
 }
 
-p {
+.p {
     color: black;
     text-align: center;
     margin-bottom: 1.5rem;
     
 }
 
-h3 {
+.h3 {
     text-align: center;
 }
 
