--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -22,6 +22,9 @@ body {
     bottom: 0; /* set bottom value to 0 */
     left: 0; /* set left value to 0 */
     right: 0; /* set right value to 0 */
+    position: fixed; 
+    bottom: 0px; 
+    height:150px;
 }
 
 
