--- a/client/src/pages/profilePage/ProfilePage.css
+++ b/client/src/pages/profilePage/ProfilePage.css
@@ -22,6 +22,7 @@ h2{
     text-align: center;
 }
 
+#footer { position: fixed; bottom: 0px; height:150px; }
 /* img {
     border: 1px solid black;
 } */
