--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -21,8 +21,8 @@ body {
     display: flex;
     justify-content: space-between;
     min-height: 250px;
-    position: fixed;
-    bottom: 0px;  
+    /* position: fixed;
+    bottom: 0px;   */
     left: 0;
     right: 0;
     height:150px;
@@ -49,7 +49,7 @@ body {
 
 .copyright {
     text-align: center;
-    margin-top: 1em;
+    margin-top: 2em;
     }
 
 /* hr {
