--- a/client/src/components/homepageData.css
+++ b/client/src/components/homepageData.css
@@ -29,21 +29,21 @@
   .event-image img {
     margin-bottom: 10px;
     padding-top: 100px;
-    width: 1000px;
-    height: 1000px;
+    width: 100%;
+    height: 100%;
     max-width: 1000px;
     max-height: 1000px;
     object-fit: contain;
     margin-left: auto;
     margin-right: auto;
-    display: block;
-}
+    display: block; 
+  }
 
 .birth-image img {
     margin-bottom: 10px;
     padding-top: 100px;
-    width: 1000px;
-    height: 1000px;
+    width: 100%;
+    height: 100%;
     max-width: 1000px;
     max-height: 1000px;
     object-fit: contain;
@@ -55,8 +55,8 @@
 .death-image img {
     margin-bottom: 10px;
     padding-top: 100px;
-    width: 1000px;
-    height: 1000px;
+    width: 100%;
+    height: 100%;
     max-width: 1000px;
     max-height: 1000px;
     object-fit: contain;
@@ -68,8 +68,8 @@
 .holiday-image img {
     margin-bottom: 10px;
     padding-top: 100px;
-    width: 1000px;
-    height: 1000px;
+    width: 100%;
+    height: 100%;
     max-width: 1000px;
     max-height: 1000px;
     object-fit: contain;
@@ -121,6 +121,8 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease-in-out;
 }
+
+ 
 
 
 .dropbtn:hover, .dropbtn:focus {
